--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,3 +42,19 @@ nav a:hover{
 .del:hover{
     background-color: #a04545;
 }
+
+.sbtn{
+    background-color: #4CAF50;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+.sbtn:hover{
+    background-color: #449f47;
+}
