--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,7 +43,7 @@ nav a:hover{
     background-color: #a04545;
 }
 
-.sbtn{
+.btn{
     background-color: #4CAF50;
     color: white;
     padding: 8px 16px;
@@ -55,6 +55,10 @@ nav a:hover{
     transition: background-color 0.3s ease;
 }
 
-.sbtn:hover{
+.btn:hover{
     background-color: #449f47;
+}
+
+.right{
+    float: right;
 }
